# chromadb_experiment

./: .gitignore  LICENSE  README.md  dump.txt  experimentation_notes.txt  pyproject.toml
config/: chromadb.yml
scripts/: IPGs_example.py  create_chromadb.py  create_database_with_specific_embeddings.py  extract_canada_page.py  extract_ipgs.py  extract_toc.py  fastapi_long_tutorial.py  fastapi_requestbody.py  fastapi_test.py  fastapi_tutorials.py  mistral_reranking.py  requests_test.py  sentence_transformers_test.py  using_a_database.py  webscraping.py  webscraping_only_text.py
src/utils/: IPGs.py  chromadb_utils.py  docx_processor.py  htmltables_converter.py  page_utils.py  text_parser.py
