[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'chromadb_experiment'
dynamic = ['version']
authors = [{name='Pierre-Olivier Bonin', email='pierreolivier.bonin@hotmail.com'}]
description = 'PoC for a ChromaDB vector database designed to work as part of a RAG architecture-based chatbot'
readme = 'README.md'
requires-python = '== 3.10'
dependencies = [
    'beautifulsoup4',
    'chardet',
    'chromadb',
    'docx',
    'fastapi[standard]',
    'importlib-metadata',
    'ipykernel',
    'lxml',
    'more_itertools==10.5.0',
    'pandas',
    'pydantic==2.10.3',
    'PyYAML==6.0.2',
    'requests==2.32.3',
    'sentencepiece',
    'sentence_transformers==3.3.1',
    'setuptools',
    'torch'
    ]

[project.scripts]
build_chroma = 'utils.chromadb_utils.build_chroma_collection:main_cli'